--- a/packages/zendesk-adapter/package.json
+++ b/packages/zendesk-adapter/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/parser": "4.22.1",
     "axios": "^0.21.3",
     "axios-mock-adapter": "^1.19.0",
+    "axios-retry": "^3.1.9",
     "eslint": "^6.2.2",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-header": "^3.0.0",
